--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <!-- Logo -->
                             <div class="s-header__logo">
                                 <a href="index.html" class="s-header__logo-link">
-                                    <img class="s-header__logo-img" src="img/logo-dark.png" alt="Megakit Logo">
+                                    <img class="s-header__logo-img" src="img/Octocat.png" alt="Megakit Logo" height="10%" width="10%">
                                 </a>
                             </div>
                             <!-- End Logo -->
@@ -70,7 +70,7 @@
                 <!-- Nav -->
                 <nav class="s-header__nav js__scrollbar">
                     <div class="container-fluid">
-                        <!-- Menu List -->                                
+                        <!-- Menu List -->
                         <ul class="list-unstyled s-header__nav-menu">
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index.html">Corporate</a></li>
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_app_landing.html">App Landing</a></li>
@@ -82,7 +82,7 @@
                         </ul>
                         <!-- End Menu List -->
 
-                        <!-- Menu List -->                                
+                        <!-- Menu List -->
                         <ul class="list-unstyled s-header__nav-menu">
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">About</a></li>
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="team.html">Team</a></li>
@@ -95,7 +95,7 @@
                     </div>
                 </nav>
                 <!-- End Nav -->
-                
+
                 <!-- Action -->
                 <ul class="list-inline s-header__action s-header__action--lb">
                     <li class="s-header__action-item"><a class="s-header__action-link -is-active" href="#">En</a></li>
@@ -131,10 +131,10 @@
         <!--========== END HEADER ==========-->
 
         <!--========== PROMO BLOCK ==========-->
-        <div class="s-promo-block-v3 g-bg-position--center g-fullheight--sm" style="background: url('img/1920x1080/09.jpg');">
-            <div class="container g-ver-center--sm g-padding-y-125--xs g-padding-y-0--sm">
+        <div class="s-promo-block-v3 g-bg-position--center g-fullheight--sm" style="background: url('img/network.png');">
+            <div class="container g-ver-center--sm g-padding-y-125--xs g-padding-y-0--sm" style="background-color: rgba(0,191,255, 0.7); ">
                 <div class="g-margin-t-30--xs g-margin-t-0--sm g-margin-b-30--xs g-margin-b-70--md">
-                    <h1 class="g-font-size-35--xs g-font-size-45--sm g-font-size-50--lg g-color--white">The New York<br>Event. Megakit.</h1>
+                    <h1 class="g-font-size-35--xs g-font-size-45--sm g-font-size-50--lg g-color--white">SOCIAL GRAPHS 2018<br>Github x Data Mining x Graphs</h1>
                 </div>
                 <div class="row">
                     <div class="col-sm-8 col-sm-push-4 g-margin-b-50--xs g-margin-b-0--md">
@@ -142,19 +142,19 @@
                         <div class="row">
                             <div class="col-sm-6 g-margin-b-30--xs g-margin-b-0--md">
                                 <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
-                                    <p class="g-font-size-18--xs g-color--white-opacity">The time has come to bring those ideas and plans to life. This is where we really begin to visualize your napkin sketches and make them into beautiful pixels.</p>
+                                    <p class="g-font-size-18--xs g-color--white">Time has come to showcase analysis of github repositories connected with query:GAME. Meaning all repositories connected in any way to games, games development or any other game related tools.</p>
                                 </div>
                             </div>
                             <div class="col-sm-5 col-sm-offset-1">
                                 <div class="clearfix">
                                     <div class="pull-left">
                                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                                            <span class="s-promo-block-v3__date g-font-size-100--xs g-font-size-135--lg g-font-weight--300 g-color--primary">21</span>
+                                            <span class="s-promo-block-v3__date g-font-size-100--xs g-font-size-135--lg g-font-weight--300 g-color--white">12</span>
                                         </div>
                                     </div>
                                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
                                         <span class="s-promo-block-v3__month g-font-size-18--xs g-font-size-22--lg g-font-weight--300 g-color--white-opacity-light">Dec</span>
-                                        <span class="s-promo-block-v3__year g-font-size-18--xs g-font-size-22--lg g-font-weight--300 g-color--white-opacity-light">2016</span>
+                                        <span class="s-promo-block-v3__year g-font-size-18--xs g-font-size-22--lg g-font-weight--300 g-color--white-opacity-light">2018</span>
                                     </div>
                                 </div>
                             </div>
@@ -162,9 +162,9 @@
                     </div>
                     <div class="col-sm-4 col-sm-pull-8">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
-                            <a class="js__popup__youtube" href="https://www.youtube.com/watch?v=lcFYdgZKZxY" title="Intro Video">
+                            <a class="js__popup__youtube" href="https://www.youtube.com/watch?v=kWHipUPhE28" title="Project Introduction" target="_blank">
                                 <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
-                                <span class="text-uppercase g-font-size-13--xs g-color--white g-padding-x-15--xs">Watch the Overview</span>
+                                <span class="text-uppercase g-font-size-13--xs g-color--white g-padding-x-15--xs">Watch the Project Introduction</span>
                             </a>
                         </div>
                     </div>
