--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Megakit - HTML5 Theme</title>
+        <title>Social Graphs 2018 -- Project</title>
         <meta name="keywords" content="HTML5 Theme" />
         <meta name="description" content="Megakit - HTML5 Theme">
         <meta name="author" content="keenthemes.com">
@@ -165,6 +165,14 @@
                             <a class="js__popup__youtube" href="https://www.youtube.com/watch?v=kWHipUPhE28" title="Project Introduction" target="_blank">
                                 <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
                                 <span class="text-uppercase g-font-size-13--xs g-color--white g-padding-x-15--xs">Watch the Project Introduction</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-sm-pull-8" style="padding-top: 20px;">
+                        <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
+                            <a class="js__popup__youtube" href="https://colab.research.google.com/drive/1Ntbk7qkqxD9m36ZArT2AS53Vzf-0MXI_" title="Project Notebook" target="_blank" style="padding-left: 9px;">
+                                <i class="ti-link s-icon s-icon--sm s-icon s-icon--white-bg g-radius--circle"></i>
+                                <span class="text-uppercase g-font-size-13--xs g-color--white g-padding-x-15--xs">Take a look at Jupyter Notebook</span>
                             </a>
                         </div>
                     </div>
