--- a/index.html
+++ b/index.html
@@ -182,14 +182,110 @@
         <!--========== END PROMO BLOCK ==========-->
 
         <!--========== PAGE CONTENT ==========-->
+
+        <!-- Parallax -->
+        <div class="js__parallax-window" style="background: url(img/cat.png) 50% 0 no-repeat fixed;">
+            <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
+                <div class="g-margin-b-20--xs">
+                    <div class="g-text-center--xs g-margin-b-20--xs">
+                        <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--blue-opacity g-letter-spacing--2 g-margin-b-25--xs">repositories &amp; users</p>
+                        <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-font-family--playfair g-color--blue">Introduction to Github analysis</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Parallax -->
+
+        <!-- Mockup -->
+        <div id="js__scroll-to-section" class="container g-padding-y-80--xs g-padding-y-125--xsm">
+            <div class="row g-hor-centered-row--md g-row-col--5 g-margin-b-80--xs g-margin-b-100--md">
+                <div class="col-sm-5 g-hor-centered-row__col">
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">WHAT IS IT</p>
+                    <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">About Project</h2>
+                    <p class="g-font-size-18--sm">The main idea of our project is to use <b>Github</b> to visualize <b>connection between users and public repositories</b> present on their website. It is interesting because there is a vast amount of data on the github regarding to connections of the users to the repositories, what they are contributing and what they <b>like</b> and then they can <b>share with each other</b> and so on.
+                    </p>
+                </div>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-5 g-hor-centered-row__col">
+                  <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">WHAT DATA</p>
+                  <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Data collection</h2>
+                  <p class="g-font-size-18--sm"><b>Github rest api requests</b> are used to get all the data we need(<b>if you want to see solution go to our github page</b>).
+                    All the data was acquired as Json and put into the SQLite database. <br><b>Github</b> has <b>over 36 millions repositories</b> and that translates <b>over 20 GB data</b>.
+                    That is a lots of data and gets <b>over 360, 000 requests</b> that takes <b>over 72 hours</b> (we have a limit to get <b>30 requests per minute</b> of search and <b>5000 per hour of other commands</b>).
+                  </p>
+                </div>
+            </div>
+            <div class="row g-hor-centered-row--md g-row-col--5">
+                <div class="col-sm-5 col-sm-push-7 g-hor-centered-row__col">
+                    <img class="img-responsive" src="img/social.jpg" alt="Mockup Image">
+                </div>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-5 col-sm-pull-7 g-hor-centered-row__col ">
+                  <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">HOW IS IT DONE</p>
+                  <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Solution</h2>
+                  <p class="g-font-size-18--sm">Data is limited by query <i>"game"<i> (e.g. Repository for game development, the games created by users, and so on)
+                    it includes <b>around 849.000 repositories</b> that translates <b>around 5 GB data</b>. It gets <b>8500 requests</b> that takes <b>almost 2 hours</b> just for the lists.
+                    We also have to take <b>each profile and each contributor for the repository</b>.
+                    It takes time, <b>more than 2 hours</b> but the geting of data is not so much time consuming like the Github repository case. We also did a request for <i>"social graphs"</i>.
+                    It has just <b>787 repositories<b> so it does not include enough data.
+                  </p>
+                  </div>
+            </div>
+        <!-- End Mockup -->
+
+       <!-- Counter -->
+       <div class="js__parallax-window" style="background: url(img/what.png) 50% 0 no-repeat fixed;">
+           <div class="container g-padding-y-80--xs g-padding-y-125--sm">
+               <div class="g-text-center--xs g-margin-b-80--xs">
+                   <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs g-color--white-opacity">Facts in Numbers</p>
+                   <h2 class="g-font-size-32--xs g-font-size-36--md g-font-family--playfair g-letter-spacing--1 g-color--white">What we Got</h2>
+               </div>
+               <div class="row">
+                   <div class="col-md-3 col-xs-6 g-full-width--xs g-margin-b-70--xs g-margin-b-0--lg">
+                       <div class="g-text-center--xs">
+                           <div class="g-margin-b-10--xs">
+                               <figure class="g-display-inline-block--xs g-font-size-70--xs g-font-family--playfair g-color--primary js__counter">849</figure>
+                           </div>
+                           <div class="center-block g-hor-divider__solid--white g-width-40--xs g-margin-b-25--xs"></div>
+                           <h4 class="g-font-size-18--xs g-color--white">Thousands repositories</h4>
+                       </div>
+                   </div>
+                   <div class="col-md-3 col-xs-6 g-full-width--xs g-margin-b-70--xs g-margin-b-0--lg">
+                       <div class="g-text-center--xs">
+                           <figure class="g-display-block--xs g-font-size-70--xs g-font-family--playfair g-color--primary g-margin-b-10--xs js__counter">332</figure>
+                           <div class="center-block g-hor-divider__solid--white g-width-40--xs g-margin-b-25--xs"></div>
+                           <h4 class="g-font-size-18--xs g-color--white">Thousands with contributors</h4>
+                       </div>
+                   </div>
+                   <div class="col-md-3 col-xs-6 g-full-width--xs g-margin-b-70--xs g-margin-b-0--sm">
+                       <div class="g-text-center--xs">
+                           <figure class="g-display-block--xs g-font-size-70--xs g-font-family--playfair g-color--primary g-margin-b-10--xs js__counter">891</figure>
+                           <div class="center-block g-hor-divider__solid--white g-width-40--xs g-margin-b-25--xs"></div>
+                           <h4 class="g-font-size-18--xs g-color--white">Thousands links between Repositories</h4>
+                       </div>
+                   </div>
+                   <div class="col-md-3 col-xs-6 g-full-width--xs">
+                       <div class="g-text-center--xs">
+                           <div class="g-margin-b-10--xs">
+                               <figure class="g-display-inline-block--xs g-font-size-70--xs g-font-family--playfair g-color--primary js__counter">646</figure>
+                           </div>
+                           <div class="center-block g-hor-divider__solid--white g-width-40--xs g-margin-b-25--xs"></div>
+                           <h4 class="g-font-size-18--xs g-color--white">Thousands Users</h4>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+       <!-- End Counter -->
+
         <!-- Portfolio Filter -->
         <div class="container g-padding-y-100--xs">
             <div class="s-portfolio">
                 <div id="js__filters-portfolio-gallery" class="s-portfolio__filter-v1 cbp-l-filters-text cbp-l-filters-center">
                     <div data-filter="*" class="s-portfolio__filter-v1-item cbp-filter-item cbp-filter-item-active">Show All</div>
-                    <div data-filter=".graphic" class="s-portfolio__filter-v1-item cbp-filter-item">Graphic</div>
-                    <div data-filter=".logos" class="s-portfolio__filter-v1-item cbp-filter-item">Logo</div>
-                    <div data-filter=".motion" class="s-portfolio__filter-v1-item cbp-filter-item">Motion</div>
+                    <div data-filter=".rep" class="s-portfolio__filter-v1-item cbp-filter-item">Repositories</div>
+                    <div data-filter=".user" class="s-portfolio__filter-v1-item cbp-filter-item">Users</div>
+                    <div data-filter=".stats" class="s-portfolio__filter-v1-item cbp-filter-item">Statistics</div>
                 </div>
             </div>
         </div>
@@ -199,24 +295,19 @@
         <div class="container">
             <div id="js__grid-portfolio-gallery" class="cbp">
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item logos motion">
+                <div class="s-portfolio__item cbp-item rep motion">
                     <div class="s-portfolio__img-effect">
-                        <img src="img/400x500/01.jpg" alt="Portfolio Image">
+                        <img src="img/graphs/directedGFA.png" alt="Directed Graph for rep2rep">
                     </div>
                     <div class="s-portfolio__caption-hover--cc">
                         <div class="g-margin-b-25--xs">
-                            <h2 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Portfolio Item</h2>
-                            <p class="g-color--white-opacity">by KeenThemes Inc.</p>
+                            <h2 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Directed Graph for rep2rep</h2>
+                            <p class="g-color--white-opacity">Directed graph created to show how connections between repostiories are built. Size corresponds to the degree of node. Color corresponds to the number of contributors. Width of edge of the weight of connection(meaning how many users are shared between them).</p>
                         </div>
                         <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                             <li>
-                                <a href="img/400x500/01.jpg" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                <a href="img/graphs/directedGFA.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> Full">
                                     <i class="ti-fullscreen"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="s-icon s-icon--sm s-icon s-icon--white-bg g-radius--circle">
-                                    <i class="ti-link"></i>
                                 </a>
                             </li>
                         </ul>
@@ -444,31 +535,51 @@
         </div>
         <!-- End Portfolio -->
 
+        <!-- Speakers -->
+        <div class="g-hor-divider__dashed--sky-light">
+            <div class="container g-padding-y-80--xs g-padding-y-125--sm">
+                <div class="g-text-center--xs g-margin-b-80--xs">
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">PROJECT CONTRIBUTORS</p>
+                    <h2 class="g-font-size-32--xs g-font-size-36--sm">Who worked on this?</h2>
+                </div>
+                <div class="row g-overflow--hidden">
+                    <div class="col-xs-6 g-full-width--xs g-margin-b-30--xs g-margin-b-0--lg">
+                        <!-- Speaker -->
+                        <div class="center-block g-box-shadow__dark-lightest-v1 g-width-100-percent--xs g-width-400--lg">
+                            <img class="img-responsive g-width-100-percent--xs" src="img/oldouz.jpg" alt="Image">
+                            <div class="g-position--overlay g-padding-x-30--xs g-padding-y-30--xs g-margin-t-o-60--xs">
+                                <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
+                                    <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">Oldouz Majidi</h4>
+                                </div>
+                                <p class="g-font-weight--700">DTU, M.Sc. student in Mathematical modeling and computation</p>
+                                <p>My research goal is to build intelligence systems that solve real-world problems by automatically acquiring knowledge.</p>
+                            </div>
+                        </div>
+                        <!-- End Speaker -->
+                    </div>
+                    <div class="col-xs-6 g-full-width--xs">
+                        <!-- Speaker -->
+                        <div class="center-block g-box-shadow__dark-lightest-v1 g-width-100-percent--xs g-width-400--lg">
+                            <img class="img-responsive g-width-100-percent--xs" src="img/dariusz.jpg" alt="Image">
+                            <div class="g-position--overlay g-padding-x-30--xs g-padding-y-30--xs g-margin-t-o-60--xs">
+                                <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
+                                    <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">Dariusz Bernad</h4>
+                                </div>
+                                <p class="g-font-weight--700">DTU, M.Sc. student in Digital Media Engineering</p>
+                                <p>Software Developer working within full-stack applications with the focus area on mobile development, user experience. #Java #CSHARP #UNITY #GAMEDEV</p>
+                            </div>
+                        </div>
+                        <!-- End Speaker -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Speakers -->
+
         <!-- Clients -->
         <div class="g-container--md g-padding-y-80--xs g-padding-y-125--sm">
             <!-- Swiper Clients -->
             <div class="s-swiper js__swiper-clients">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".1s">
-                            <img class="s-clients-v1" src="img/clients/01-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".2s">
-                            <img class="s-clients-v1" src="img/clients/02-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".3s">
-                            <img class="s-clients-v1" src="img/clients/03-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".4s">
-                            <img class="s-clients-v1" src="img/clients/04-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
                     <div class="swiper-slide">
                         <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".5s">
                             <img class="s-clients-v1" src="img/clients/05-dark.png" alt="Clients Logo">
