--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
                 <div class="col-sm-5 g-hor-centered-row__col">
                     <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">WHAT IS IT</p>
                     <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">About Project</h2>
-                    <p class="g-font-size-18--sm">The main idea of our project is to use <b>Github</b> to visualize <b>connection between users and public repositories</b> present on their website. It is interesting because there is a vast amount of data on the github regarding to connections of the users to the repositories, what they are contributing and what they <b>like</b> and then they can <b>share with each other</b> and so on.
+                    <p class="g-font-size-18--sm">The main idea of our project is to use <b>Github</b> to visualize <b>connection between users and public repositories</b>
+                      present on their website. It is interesting because there is a vast amount of data on the github regarding to connections of the users to the repositories,
+                      what they are contributing and what they <b>like</b> and then they can <b>share with each other</b> and so on.<br> <br>
+                      <b>Aim of this project is to show on graphs relations between repositories and users and show some intresting statistics</b>
                     </p>
                 </div>
                 <div class="col-sm-1"></div>
@@ -301,8 +304,8 @@
                     </div>
                     <div class="s-portfolio__caption-hover--cc">
                         <div class="g-margin-b-25--xs">
-                            <h2 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Directed Graph for rep2rep</h2>
-                            <p class="g-color--white-opacity">Directed graph created to show how connections between repostiories are built. Size corresponds to the degree of node. Color corresponds to the number of contributors. Width of edge of the weight of connection(meaning how many users are shared between them).</p>
+                            <h2 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Directed Graph for rep2rep with</h2>
+                            <p class="g-color--white-opacity">Directed Graph for TOP 1000 repository to repository connections with force-directed positions to show how connections between repositories are built. Size corresponds to the degree of node. Color corresponds to the number of contributors. Width of edge of the weight of connection(meaning how many users are shared between them).</p>
                         </div>
                         <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                             <li>
@@ -314,48 +317,38 @@
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item graphic">
+                <div class="s-portfolio__item cbp-item rep">
                     <div class="s-portfolio__img-effect">
-                        <img src="img/970x647/06.jpg" alt="Portfolio Image">
+                        <img src="img/graphs/directedG.png" alt="Directed Graph for rep2rep">
                     </div>
                     <div class="s-portfolio__caption-hover--cc">
                         <div class="g-margin-b-25--xs">
-                            <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Portfolio Item</h3>
-                            <p class="g-color--white-opacity">by KeenThemes Inc.</p>
+                            <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Directed Graph for rep2rep default</h3>
+                            <p class="g-color--white-opacity">Directed Graph for TOP 1000 repository to repository connections with default positions to show how connections between repositories are built. Size corresponds to the degree of node. Color corresponds to the number of contributors. Width of edge of the weight of connection.</p>
                         </div>
                         <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                             <li>
-                                <a href="img/970x647/06.jpg" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                <a href="img/graphs/directedG.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
                                     <i class="ti-fullscreen"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="s-icon s-icon--sm s-icon s-icon--white-bg g-radius--circle">
-                                    <i class="ti-link"></i>
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item logos">
+                <div class="s-portfolio__item cbp-item rep">
                     <div class="s-portfolio__img-effect">
-                        <img src="img/400x500/02.jpg" alt="Portfolio Image">
+                        <img src="img/graphs/directedGFABetweenes.png" alt="Directed with Betweemes centrality">
                     </div>
                     <div class="s-portfolio__caption-hover--cc">
                         <div class="g-margin-b-25--xs">
-                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Portfolio Item</h4>
-                            <p class="g-color--white-opacity">by KeenThemes Inc.</p>
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Directed graph with betweenes centrality</h4>
+                            <p class="g-color--white-opacity">Directed Graph for TOP 1000 repository to repository connections with force-directed positions to show how connections between repositories are built. Size corresponds to the betweenes centrality. Color corresponds to the number of contributors. Width of edge of the weight of connection.</p>
                         </div>
                         <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                             <li>
-                                <a href="img/400x500/02.jpg" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                <a href="img/graphs/directedGFABetweenes.jpg" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
                                     <i class="ti-fullscreen"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="s-icon s-icon--sm s-icon s-icon--white-bg g-radius--circle">
-                                    <i class="ti-link"></i>
                                 </a>
                             </li>
                         </ul>
@@ -506,24 +499,20 @@
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item motion graphic">
+                <div class="s-portfolio__item cbp-item motion stats">
                     <div class="s-portfolio__img-effect">
-                        <img src="img/970x647/05.jpg" alt="Portfolio Image">
+                        <img src="img/graphs/wordCloud.png" alt="Word cloud">
                     </div>
                     <div class="s-portfolio__caption-hover--cc">
                         <div class="g-margin-b-25--xs">
-                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Portfolio Item</h4>
-                            <p class="g-color--white-opacity">by KeenThemes Inc.</p>
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Word cloud</h4>
+                            <p class="g-color--white-opacity">This is the word cloud created from descriptions of all projects. The bigger a word the more time it was present across repositories.
+                              We can observe that words such as <b>life</b>,<b>google</b>gametrial<b>putea</b> were very frequently used.</p>
                         </div>
                         <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                             <li>
-                                <a href="img/970x647/05.jpg" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                <a href="img/graphs/wordCloud.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
                                     <i class="ti-fullscreen"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" class="s-icon s-icon--sm s-icon s-icon--white-bg g-radius--circle">
-                                    <i class="ti-link"></i>
                                 </a>
                             </li>
                         </ul>
@@ -581,8 +570,9 @@
             <!-- Swiper Clients -->
             <div class="s-swiper js__swiper-clients">
                     <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".5s">
-                            <img class="s-clients-v1" src="img/clients/05-dark.png" alt="Clients Logo">
+                        <div class="g-text-center--xs wow fadeIn" data-wow-duration=".3" data-wow-delay=".5s">
+                            <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">REPOSITORY WITH ALL THE RESOURCE FILES FOR THE PROJECT</p>
+                            <a href="https://github.com/WakeCaine/socialgraphsfiles"><img class="s-clients-v1" src="img/clients/05-dark.png" alt="Clients Logo"></a>
                         </div>
                     </div>
                 </div>
@@ -598,33 +588,7 @@
             <div class="g-hor-divider__dashed--white-opacity-lightest">
                 <div class="container g-padding-y-80--xs">
                     <div class="row">
-                        <div class="col-sm-2 g-margin-b-20--xs g-margin-b-0--md">
-                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Home</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">About</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Work</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-2 g-margin-b-20--xs g-margin-b-0--md">
-                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Twitter</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Facebook</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Instagram</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">YouTube</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-2 g-margin-b-40--xs g-margin-b-0--md">
-                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Subscribe to Our Newsletter</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Privacy Policy</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes">Terms &amp; Conditions</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1 s-footer__logo g-padding-y-50--xs g-padding-y-0--md">
-                            <h3 class="g-font-size-18--xs g-color--white">Megakit</h3>
-                            <p class="g-color--white-opacity">We are a creative studio focusing on culture, luxury, editorial &amp; art. Somewhere between sophistication and simplicity.</p>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -635,11 +599,11 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <a href="index.html">
-                            <img class="g-width-100--xs g-height-auto--xs" src="img/logo.png" alt="Megakit Logo">
+
                         </a>
                     </div>
                     <div class="col-xs-6 g-text-right--xs">
-                        <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light"><a href="http://keenthemes.com/preview/Megakit/">Megakit</a> Theme Powered by: <a href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                        <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light">Theme Powered by: <a href="http://www.keenthemes.com/">KeenThemes.com</a></p>
                     </div>
                 </div>
             </div>
