--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item motion graphic">
+                <div class="s-portfolio__item cbp-item motion stats">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/07.jpg" alt="Portfolio Image">
                     </div>
@@ -498,7 +498,115 @@
                         </ul>
                     </div>
                 </div>
+                <div class="s-portfolio__item cbp-item motion rep">
+                    <div class="s-portfolio__img-effect">
+                        <img src="img/graphs/histogramRepos.png" alt="histogramRepos">
+                    </div>
+                    <div class="s-portfolio__caption-hover--cc">
+                        <div class="g-margin-b-25--xs">
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Degrees' histograms of graph with around 1000 r2r connections</h4>
+                            <p class="g-color--white-opacity">Histograms of degrees of graph with around 1000 repository to repository connections.</p>
+                        </div>
+                        <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                            <li>
+                                <a href="img/graphs/histogramRepos.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                    <i class="ti-fullscreen"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="s-portfolio__item cbp-item motion stats">
+                    <div class="s-portfolio__img-effect">
+                        <img src="img/graphs/lineforks.png" alt="Word cloud">
+                    </div>
+                    <div class="s-portfolio__caption-hover--cc">
+                        <div class="g-margin-b-25--xs">
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Line chart of forks</h4>
+                            <p class="g-color--white-opacity">Line chart showing forks and amount of repositories. We can see that there is a tendency that there is very small amount of repositories with most of the forks.</p>
+                        </div>
+                        <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                            <li>
+                                <a href="img/graphs/lineforks.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                    <i class="ti-fullscreen"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="s-portfolio__item cbp-item motion stats">
+                    <div class="s-portfolio__img-effect">
+                        <img src="img/graphs/linestars.png" alt="Word cloud">
+                    </div>
+                    <div class="s-portfolio__caption-hover--cc">
+                        <div class="g-margin-b-25--xs">
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Line chart of stars</h4>
+                            <p class="g-color--white-opacity">Line chart showing stars and amount of repositories. We can see that there is a tendency that there is very small amount of repositories with most of the stars.</p>
+                        </div>
+                        <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                            <li>
+                                <a href="img/graphs/linestars.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                    <i class="ti-fullscreen"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="s-portfolio__item cbp-item motion stats">
+                    <div class="s-portfolio__img-effect">
+                        <img src="img/graphs/lineYears.png" alt="lineYears">
+                    </div>
+                    <div class="s-portfolio__caption-hover--cc">
+                        <div class="g-margin-b-25--xs">
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Line charts of creation and updates</h4>
+                            <p class="g-color--white-opacity">Line charts that show how many repositories were created and when and also what is the tendency of updates over the years of those repositories.</p>
+                        </div>
+                        <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                            <li>
+                                <a href="img/graphs/lineYears.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                    <i class="ti-fullscreen"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <!-- Item -->
+                <div class="s-portfolio__item cbp-item motion stats">
+                    <div class="s-portfolio__img-effect">
+                        <img src="img/graphs/pieLanguages.png" alt="pieLanguages">
+                    </div>
+                    <div class="s-portfolio__caption-hover--cc">
+                        <div class="g-margin-b-25--xs">
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Most common languages</h4>
+                            <p class="g-color--white-opacity">Pie charts present most commonly used languages among repositories.</p>
+                        </div>
+                        <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                            <li>
+                                <a href="img/graphs/pieLanguages.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                    <i class="ti-fullscreen"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="s-portfolio__item cbp-item motion stats">
+                    <div class="s-portfolio__img-effect">
+                        <img src="img/graphs/pieLicenses.png" alt="pieLicenses">
+                    </div>
+                    <div class="s-portfolio__caption-hover--cc">
+                        <div class="g-margin-b-25--xs">
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Most common licenses</h4>
+                            <p class="g-color--white-opacity">Pie charts present most commonly used licenses among repositories.</p>
+                        </div>
+                        <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                            <li>
+                                <a href="img/graphs/pieLicenses.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                    <i class="ti-fullscreen"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="s-portfolio__item cbp-item motion stats">
                     <div class="s-portfolio__img-effect">
                         <img src="img/graphs/wordCloud.png" alt="Word cloud">
