--- a/index.html
+++ b/index.html
@@ -72,58 +72,25 @@
                     <div class="container-fluid">
                         <!-- Menu List -->
                         <ul class="list-unstyled s-header__nav-menu">
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index.html">Corporate</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_app_landing.html">App Landing</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider -is-active" href="index_portfolio.html">Portfolio</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_events.html">Events</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_lawyer.html">Lawyer</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_clinic.html">Clinic</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_coming_soon.html">Coming Soon</a></li>
+                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="#ABOUT">About</a></li>
+                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="#NUMBERS">Numbers</a></li>
+                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider -is-active" href="#GRAPHS">Graphs</a></li>
+                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="#CONCLUSIONS">Conclusions</a></li>
+                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="#CONTRIBUTORS">Contributors</a></li>
+                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="#RESOURCES">RESOURCES</a></li>
                         </ul>
                         <!-- End Menu List -->
 
                         <!-- Menu List -->
-                        <ul class="list-unstyled s-header__nav-menu">
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">About</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="team.html">Team</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="services.html">Services</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="events.html">Events</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="faq.html">FAQ</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Contacts</a></li>
-                        </ul>
                         <!-- End Menu List -->
                     </div>
                 </nav>
                 <!-- End Nav -->
 
                 <!-- Action -->
-                <ul class="list-inline s-header__action s-header__action--lb">
-                    <li class="s-header__action-item"><a class="s-header__action-link -is-active" href="#">En</a></li>
-                    <li class="s-header__action-item"><a class="s-header__action-link" href="#">Fr</a></li>
-                </ul>
                 <!-- End Action -->
 
                 <!-- Action -->
-                <ul class="list-inline s-header__action s-header__action--rb">
-                    <li class="s-header__action-item">
-                        <a class="s-header__action-link" href="https://www.behance.net/keenthemes">
-                            <i class="g-padding-r-5--xs ti-facebook"></i>
-                            <span class="g-display-none--xs g-display-inline-block--sm">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="s-header__action-item">
-                        <a class="s-header__action-link" href="https://twitter.com/keenthemes">
-                            <i class="g-padding-r-5--xs ti-twitter"></i>
-                            <span class="g-display-none--xs g-display-inline-block--sm">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="s-header__action-item">
-                        <a class="s-header__action-link" href="https://dribbble.com/keenthemes">
-                            <i class="g-padding-r-5--xs ti-dribbble"></i>
-                            <span class="g-display-none--xs g-display-inline-block--sm">Dribbble</span>
-                        </a>
-                    </li>
-                </ul>
                 <!-- End Action -->
             </div>
             <!-- End Overlay -->
@@ -197,6 +164,7 @@
         <!-- End Parallax -->
 
         <!-- Mockup -->
+        <div id="ABOUT">
         <div id="js__scroll-to-section" class="container g-padding-y-80--xs g-padding-y-125--xsm">
             <div class="row g-hor-centered-row--md g-row-col--5 g-margin-b-80--xs g-margin-b-100--md">
                 <div class="col-sm-5 g-hor-centered-row__col">
@@ -234,10 +202,11 @@
                   </p>
                   </div>
             </div>
+          </div>
         <!-- End Mockup -->
 
        <!-- Counter -->
-       <div class="js__parallax-window" style="background: url(img/what.png) 50% 0 no-repeat fixed;">
+       <div id="NUMBERS" class="js__parallax-window" style="background: url(img/what.png) 50% 0 no-repeat fixed;">
            <div class="container g-padding-y-80--xs g-padding-y-125--sm">
                <div class="g-text-center--xs g-margin-b-80--xs">
                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs g-color--white-opacity">Facts in Numbers</p>
@@ -282,7 +251,7 @@
        <!-- End Counter -->
 
         <!-- Portfolio Filter -->
-        <div class="container g-padding-y-100--xs">
+        <div id="GRAPHS" class="container g-padding-y-100--xs">
             <div class="s-portfolio">
                 <div id="js__filters-portfolio-gallery" class="s-portfolio__filter-v1 cbp-l-filters-text cbp-l-filters-center">
                     <div data-filter="*" class="s-portfolio__filter-v1-item cbp-filter-item cbp-filter-item-active">Show All</div>
@@ -717,7 +686,7 @@
         <!-- End Portfolio -->
 
         <!-- Testimonials -->
-        <div class="g-hor-divider__dashed--sky-light g-padding-y-80--xs g-padding-y-125--xsm">
+        <div id="CONCLUSIONS" class="g-hor-divider__dashed--sky-light g-padding-y-80--xs g-padding-y-125--xsm">
             <div class="container g-text-center--xs">
                 <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-50--xs">Conclusions from the project</p>
                 <div class="s-swiper js__swiper-testimonials">
@@ -761,7 +730,7 @@
         <!-- End Testimonials -->
 
         <!-- Speakers -->
-        <div class="g-hor-divider__dashed--sky-light">
+        <div id="CONTRIBUTORS" class="g-hor-divider__dashed--sky-light">
             <div class="container g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-text-center--xs g-margin-b-80--xs">
                     <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">PROJECT CONTRIBUTORS</p>
@@ -802,7 +771,7 @@
         <!-- End Speakers -->
 
         <!-- Clients -->
-        <div class="g-container--md g-padding-y-80--xs g-padding-y-125--sm">
+        <div id="RESOURCES" class="g-container--md g-padding-y-80--xs g-padding-y-125--sm">
             <!-- Swiper Clients -->
             <div class="s-swiper js__swiper-clients">
                     <div class="swiper-slide">
